API mathutils.geometry.tessellate_polygon returns bad results sometimes #68554

Closed
opened 2019-08-11 21:39:39 +02:00 by Julien Duroure · 6 comments
Member

System Information
Operating system: Mint 19
Graphics card: Nvidia 860M

Blender Version
Broken: 2.80

Short description of error
API mathutils.geometry.tessellate_polygon returns bad results sometimes

Exact steps for others to reproduce the error
Open attached file, and run the script.
See on console that sometimes, tessellate returns (0, 0, 0) indices for triangles

minicube.blend

**System Information** Operating system: Mint 19 Graphics card: Nvidia 860M **Blender Version** Broken: 2.80 **Short description of error** API mathutils.geometry.tessellate_polygon returns bad results sometimes **Exact steps for others to reproduce the error** Open attached file, and run the script. See on console that sometimes, tessellate returns (0, 0, 0) indices for triangles [minicube.blend](https://archive.blender.org/developer/F7659430/minicube.blend)
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can confirm that. Looks like it is caused by degenerate geometry. There are four faces with zero area.

Can confirm that. Looks like it is caused by degenerate geometry. There are four faces with zero area.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This is a limitation of the current implementation, and not so much a bug. I've added this limitation to the documentation to make it explicit.

This is a limitation of the current implementation, and not so much a bug. I've added this limitation to the documentation to make it explicit.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2020-01-27 17:26:08 +01:00
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#68554
No description provided.